--- a/example.html
+++ b/example.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>example phaser</title>
-    <script src="phaser.min.js"></script> 
+    <script src="https://cdn.jsdelivr.net/npm/phaser@3.15.1/dist/phaser-arcade-physics.min.js"></script> 
 </head>
 <body>
 
